--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,25 @@
         android:theme="@style/Theme.SplashScreen"
         tools:targetApi="31">
         <activity
+            android:name=".SplashDashboardActivity"
+            android:exported="true" />
+        <activity
+            android:name=".SplashRegisterActivity"
+            android:exported="true" />
+        <activity
+            android:name=".SplashLoginActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".SplashScreenActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".NavigationActivity"
             android:exported="true">
             <intent-filter>
