Add, Multiply, subtract

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,27 @@
         android:theme="@style/Theme.SplashScreen"
         tools:targetApi="31">
         <activity
+            android:name=".Logics.SubtractionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Logics.MultiplyActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Logics.AddActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Logics.countDownActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Logics.gameOpeningActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".SplashDashboardActivity"
             android:exported="true" />
         <activity
@@ -21,7 +42,6 @@
         <activity
             android:name=".SplashLoginActivity"
             android:exported="true" />
-
         <activity
             android:name=".SplashScreenActivity"
             android:exported="true">
